--- a/index.html
+++ b/index.html
@@ -6,35 +6,47 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Claudio Ortiz Freelancer</h1>
+    <header>
+      <h1>Claudio Ortiz Freelancer</h1>
+    </header>
+    <section>
+      <h2>Diseño y Desarrollo Web Freelancer</h2>
+      <p>Oregon, USA</p>
+    </section>
 
-    <h2>Diseño y Desarrollo Web Freelancer</h2>
+    <main>
+      <h2>Mis servicios</h2>
+      <section>
+        <h3>Diseño Web Creativo</h3>
+        <p>
+          El diseño es nuestra pasión. Desde la creación de logotipos
+          distintivos hasta la elección de paletas de colores cautivadoras, nos
+          esforzamos por dar vida a tu visión creativa y hacer que destaque en
+          la web.
+        </p>
+      </section>
 
-    <p>Oregon, USA</p>
+      <section>
+        <h3>Desarrollo de Aplicaciones Móviles</h3>
+        <p>
+          Creamos aplicaciones específicas para plataformas, aprovechando al
+          máximo las características exclusivas de iOS y Android para ofrecer
+          una experiencia perfecta y optimizada.
+        </p>
+      </section>
 
-    <h2>Mis servicios</h2>
-
-    <h3>Diseño Web Creativo</h3>
-    <p>
-      El diseño es nuestra pasión. Desde la creación de logotipos distintivos
-      hasta la elección de paletas de colores cautivadoras, nos esforzamos por
-      dar vida a tu visión creativa y hacer que destaque en la web.
-    </p>
-
-    <h3>Desarrollo de Aplicaciones Móviles</h3>
-    <p>
-      Creamos aplicaciones específicas para plataformas, aprovechando al máximo
-      las características exclusivas de iOS y Android para ofrecer una
-      experiencia perfecta y optimizada.
-    </p>
-
-    <h3>Soluciones de E-Commerce Personalizadas</h3>
-    <>Implementamos estrategias de SEO específicas para comercio electrónico
-    para mejorar la visibilidad de tu tienda en línea y atraer a más clientes
-    potenciales.
-
-    <h2>Contacto</h2>
-
-    <>Todos los derechos reservados. Claudio Ortiz Freelancer © 2023
+      <section>
+        <h3>Soluciones de E-Commerce Personalizadas</h3>
+        <>Implementamos estrategias de SEO específicas para comercio electrónico
+        para mejorar la visibilidad de tu tienda en línea y atraer a más
+        clientes potenciales.
+      </section>
+    </main>
+    <section>
+      <h2>Contacto</h2>
+    </section>
+    <footer>
+      <Todos los derechos reservados. Claudio Ortiz Freelancer © 2023
+    </footer>
   </body>
 </html>
