--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Diseñador Freelancer</title>
   </head>
   <body>
     <header>
       <h1>Claudio Ortiz Freelancer</h1>
     </header>
+    <nav>
+      <a href="#">Inicio</a>
+      <a href="#">Sobre mi</a>
+      <a href="#">Clientes</a>
+      <a href="#">Contacto</a>
+    </nav>
     <section>
       <h2>Diseño y Desarrollo Web Freelancer</h2>
       <p>Oregon, USA</p>
+
+      <a href="#">Contactar</a>
     </section>
 
     <main>
