--- a/index.html
+++ b/index.html
@@ -158,6 +158,31 @@
     </main>
     <section>
       <h2>Contacto</h2>
+
+      <form>
+        <fieldset>
+          <legend>Contactanos llenando todos los campos</legend>
+          <div>
+            <label>Nombre</label>
+            <input type="text" placeholder="Tu nombre" />
+          </div>
+          <div>
+            <label>Teléfono</label>
+            <input type="tel" placeholder="Tu teléfono" />
+          </div>
+          <div>
+            <label>Correo</label>
+            <input type="email" placeholder="Mail" />
+          </div>
+          <div>
+            <label>Mensaje</label>
+            <textarea></textarea>
+          </div>
+          <div>
+            <input type="submit" value="Enviar" />
+          </div>
+        </fieldset>
+      </form>
     </section>
     <footer>
       <Todos los derechos reservados. Claudio Ortiz Freelancer © 2023
