Estilos_fonts_size_rem

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Claudio Ortiz Freelancer</h1>
+      <h1>Claudio Ortiz <span>Freelancer</span></h1>
     </header>
     <nav>
       <a href="#">Inicio</a>
