Estilos_color_font_family_root

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diseñador Freelancer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preload" href="css/style.css" as="style" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <h1>Claudio Ortiz <span>Freelancer</span></h1>
+      <h1 class="titulo">Claudio Ortiz <span>Freelancer</span></h1>
     </header>
     <nav>
       <a href="#">Inicio</a>
@@ -19,7 +25,7 @@
     </nav>
 
     <section>
-      <h2>Diseño y Desarrollo Web Freelancer</h2>
+      <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="icon icon-tabler icon-tabler-map-pin-code"
