--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <header>
       <h1 class="titulo">Claudio Ortiz <span>Freelancer</span></h1>
     </header>
-    <nav>
-      <a href="#">Inicio</a>
-      <a href="#">Sobre mi</a>
-      <a href="#">Clientes</a>
-      <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-bg">
+      <nav class="navegacion-principal contenedor">
+        <a href="#">Inicio</a>
+        <a href="#">Sobre mi</a>
+        <a href="#">Clientes</a>
+        <a href="#">Contacto</a>
+      </nav>
+    </div>
 
     <section>
       <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
