seccion_hero_boton_posicionar

--- a/index.html
+++ b/index.html
@@ -28,31 +28,35 @@
       </nav>
     </div>
 
-    <section>
-      <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="icon icon-tabler icon-tabler-map-pin-code"
-        width="88"
-        height="88"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="#FFA500"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      >
-        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-        <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-        <path
-          d="M11.85 21.48a1.992 1.992 0 0 1 -1.263 -.58l-4.244 -4.243a8 8 0 1 1 13.385 -3.585"
-        />
-        <path d="M20 21l2 -2l-2 -2" />
-        <path d="M17 17l-2 2l2 2" />
-      </svg>
-      <p>Oregon, USA</p>
+    <section class="hero">
+      <div class="contenido-hero">
+        <h2>Diseño y Desarrollo Web Freelancer</h2>
+        <div class="ubicacion">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-map-pin-code"
+            width="88"
+            height="88"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#FFA500"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+            <path
+              d="M11.85 21.48a1.992 1.992 0 0 1 -1.263 -.58l-4.244 -4.243a8 8 0 1 1 13.385 -3.585"
+            />
+            <path d="M20 21l2 -2l-2 -2" />
+            <path d="M17 17l-2 2l2 2" />
+          </svg>
+          <p>Oregon, USA</p>
+        </div>
 
-      <a href="#">Contactar</a>
+        <a class="boton" href="#">Contactar</a>
+      </div>
     </section>
 
     <main>
