agregando_comentarios_degradados_sombras

--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
           </svg>
           <p>Oregon, USA</p>
         </div>
+        <!-- .contenido-hero -->
 
         <a class="boton" href="#">Contactar</a>
       </div>
     </section>
 
-    <main>
+    <main class="contenedor sombra">
       <h2>Mis servicios</h2>
       <section>
         <h3>Diseño Web Creativo</h3>
@@ -201,7 +202,7 @@
       </form>
     </section>
     <footer>
-      <Todos los derechos reservados. Claudio Ortiz Freelancer © 2023
+      <p>Todos los derechos reservados. Claudio Ortiz Freelancer © 2023</p>
     </footer>
   </body>
 </html>
