--- a/index.html
+++ b/index.html
@@ -62,116 +62,126 @@
 
     <main class="contenedor sombra">
       <h2>Mis servicios</h2>
-      <section>
-        <h3>Diseño Web Creativo</h3>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-palette"
-          width="40"
-          height="40"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="#002244"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path
-            d="M12 21a9 9 0 0 1 0 -18c4.97 0 9 3.582 9 8c0 1.06 -.474 2.078 -1.318 2.828c-.844 .75 -1.989 1.172 -3.182 1.172h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25"
-          />
-          <path d="M8.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-          <path d="M12.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-          <path d="M16.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-        </svg>
-        <p>
-          El diseño es nuestra pasión. Desde la creación de logotipos
-          distintivos hasta la elección de paletas de colores cautivadoras, nos
-          esforzamos por dar vida a tu visión creativa y hacer que destaque en
-          la web.
-        </p>
-      </section>
 
-      <section>
-        <h3>Desarrollo de Aplicaciones Móviles</h3>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-android"
-          width="40"
-          height="40"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="#002244"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M4 10l0 6" />
-          <path d="M20 10l0 6" />
-          <path
-            d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0"
-          />
-          <path d="M8 3l1 2" />
-          <path d="M16 3l-1 2" />
-          <path d="M9 18l0 3" />
-          <path d="M15 18l0 3" />
-        </svg>
+      <div class="servicios">
+        <section class="servicio">
+          <h3>Diseño Web Creativo</h3>
+          <div class="iconos">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-palette"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#002244"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M12 21a9 9 0 0 1 0 -18c4.97 0 9 3.582 9 8c0 1.06 -.474 2.078 -1.318 2.828c-.844 .75 -1.989 1.172 -3.182 1.172h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25"
+              />
+              <path d="M8.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+              <path d="M12.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+              <path d="M16.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+            </svg>
+          </div>
+          <p>
+            El diseño es nuestra pasión. Desde la creación de logotipos
+            distintivos hasta la elección de paletas de colores cautivadoras,
+            nos esforzamos por dar vida a tu visión creativa y hacer que
+            destaque en la web.
+          </p>
+        </section>
 
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-apple"
-          width="40"
-          height="40"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="#002244"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path
-            d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z"
-          />
-          <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
-        </svg>
-        <p>
-          Creamos aplicaciones específicas para plataformas, aprovechando al
-          máximo las características exclusivas de iOS y Android para ofrecer
-          una experiencia perfecta y optimizada.
-        </p>
-      </section>
+        <section class="servicio">
+          <h3>Desarrollo de Aplicaciones Móviles</h3>
+          <div class="iconos">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-android"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#002244"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M4 10l0 6" />
+              <path d="M20 10l0 6" />
+              <path
+                d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0"
+              />
+              <path d="M8 3l1 2" />
+              <path d="M16 3l-1 2" />
+              <path d="M9 18l0 3" />
+              <path d="M15 18l0 3" />
+            </svg>
 
-      <section>
-        <h3>Soluciones de E-Commerce Personalizadas</h3>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-shopee"
-          width="40"
-          height="40"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="#002244"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path
-            d="M4 7l.867 12.143a2 2 0 0 0 2 1.857h10.276a2 2 0 0 0 2 -1.857l.867 -12.143h-16z"
-          />
-          <path d="M8.5 7c0 -1.653 1.5 -4 3.5 -4s3.5 2.347 3.5 4" />
-          <path
-            d="M9.5 17c.413 .462 1 1 2.5 1s2.5 -.897 2.5 -2s-1 -1.5 -2.5 -2s-2 -1.47 -2 -2c0 -1.104 1 -2 2 -2s1.5 0 2.5 1"
-          />
-        </svg>
-        <p>
-          estrategias de SEO específicas para comercio electrónico para mejorar
-          la visibilidad de tu tienda en línea y atraer a más clientes
-          potenciales.
-        </p>
-      </section>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-apple"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#002244"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z"
+              />
+              <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
+            </svg>
+          </div>
+          <p>
+            Creamos aplicaciones específicas para plataformas, aprovechando al
+            máximo las características exclusivas de iOS y Android para ofrecer
+            una experiencia perfecta y optimizada.
+          </p>
+        </section>
+
+        <section class="servicio">
+          <h3>Soluciones de E-Commerce Personalizadas</h3>
+          <div class="iconos">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-brand-shopee"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#002244"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M4 7l.867 12.143a2 2 0 0 0 2 1.857h10.276a2 2 0 0 0 2 -1.857l.867 -12.143h-16z"
+              />
+              <path d="M8.5 7c0 -1.653 1.5 -4 3.5 -4s3.5 2.347 3.5 4" />
+              <path
+                d="M9.5 17c.413 .462 1 1 2.5 1s2.5 -.897 2.5 -2s-1 -1.5 -2.5 -2s-2 -1.47 -2 -2c0 -1.104 1 -2 2 -2s1.5 0 2.5 1"
+              />
+            </svg>
+          </div>
+          <p>
+            estrategias de SEO específicas para comercio electrónico para
+            mejorar la visibilidad de tu tienda en línea y atraer a más clientes
+            potenciales.
+          </p>
+        </section>
+      </div>
+      <!--.Servicios-->
     </main>
     <section>
       <h2>Contacto</h2>
